added pages done

--- a/src/index.css
+++ b/src/index.css
@@ -519,3 +519,7 @@ body {
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+.swiper-wrapper{
+	display:flex;
+	align-items:center;
+}
